--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -56,9 +56,24 @@
 
 .languages-section {
     padding: 1rem;
+    width: 50%;
 
+    ul {
+        padding: 0;
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 5px;
+    }
 
-    border: 3px solid purple;
+    .list-item {
+        padding: 0.5rem;
+        border-radius: 3px;
+    }
+
+    /*border: 3px solid purple;*/
 }
 
 .mystery-word-section {
