--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,6 +12,8 @@
     h1 {
         color: #F9F4DA;
         text-align: center;
+        font-weight: 400;
+        letter-spacing: 1px;
 
         /*border: 3px solid green;*/
     }
@@ -20,6 +22,8 @@
         color: #8E8E8E;
         text-align: center;
         font-size: 1.2rem;
+        letter-spacing: 1px;
+        font-weight: 100;
 
         /*border: 3px solid blue;*/
     }
@@ -58,7 +62,7 @@
     padding: 1rem;
     width: 50%;
 
-    ul {
+    .list-wrapper {
         padding: 0;
         list-style: none;
         display: flex;
@@ -78,9 +82,24 @@
 
 .mystery-word-section {
     padding: 1rem;
+    display: flex;
+    gap: 0.25rem;
+
+    .letter-block {
+        width: 50px;
+        height: 50px;
+        background-color: #323232;
+        color: #F9F4DA;
+        font-weight: 600;
+        font-size: 1.5rem;
+        border-radius: 3px;
+        border-bottom: 3px solid #F9F4DA;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
 
-    border: 3px solid orange;
 }
 
 .keyboard-section {
