--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,19 +3,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 3rem;
     max-width: 90%;
     /*border: 3px solid lime;*/
 }
 
 .header-container {
     padding: 1rem;
-    width: 65%;
+    width: 90%;
     height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 
     /*border: 3px solid red;*/
 }
@@ -41,7 +42,7 @@
 
 .status-section {
     padding: 1rem;
-    width: 70%;
+    width: 80%;
     min-width: 300px;
     max-width: 1400px;
     height: fit-content;
@@ -69,7 +70,7 @@
 
 .languages-section {
     padding: 1rem;
-    width: 50%;
+    width: 90%;
 
     /*border: 3px solid purple;*/
 }
@@ -91,7 +92,11 @@
 
 .mystery-word-section {
     padding: 1rem;
+    width: 90%;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: 0.25rem;
 }
 
@@ -110,13 +115,14 @@
 }
 
 .keyboard-section {
+    padding: 1rem;
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
-    margin-top: 30px;
 }
 
 .keyboard-section .keyboard-letter {
@@ -126,9 +132,28 @@
     border-radius: 4px;
     border: 1px solid #D7D7D7;
     font-weight: 600;
+    font-size: 1.25rem;
+    cursor: pointer;
 }
 
 .footer-section {
     padding: 1rem;
-    border: 3px solid red;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-section .new-game-btn {
+    background-color: #11B5E5;
+    border: 1px solid #D7D7D7;
+    padding: 1rem;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 1.25rem;
+    width: 50%;
+    min-width: 225px;
+
 }
