--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    max-width: 90%;
+    max-width: 50%;
+    min-width: 400px;
     /*border: 3px solid lime;*/
 }
 
